  - added $cacheable-parameter to register_compiler_function() (messju)
  - added $cacheable-parameter with default=true to register_function()
    and register_block() (messju)
  - add math speedup to core (Dominik, Monte)
  - fix newlines for tags without template output (Monte)
  - added config-option "request_use_auto_globals" to make auto-globals be
    used as request vars instead of HTTP_*_VARS (messju)
  - speed up config_load, simplify compiling (Monte)
  - added block-methods for registered objects (Bharat Mediratta, messju)
  - ignore one char resource names like c:foo.tpl (Monte)
  - added default_resource_type feature (Monte)
  - fix bug where config file starts with hidden section (boots, Monte)
  - add discrete error checking pertaining to $cache_dir
    and $compile_dir, their existance and writability (Monte)
  - fixed behaviour of start=... for {counter} (messju)
  - fixed assign for {counter} (messju)
  - added params vdir, hdir and inner to html_table to allow looping
    over the data in various directions (messju)
  - allow spaces in literal tags (Paul Lockaby, Monte)
  - speed up compiled templates, hardcode plugin filepaths
    instead of dynamically calculate at runtime. (Monte)
  - abstract many core components from Smarty.class.php,
    speeding up core class instantiation (Monte)
  - fixed bug in _create_dir_structure() when used with open_basedir-
    restriction and relative paths (messju)
  - use DIRECTORY_SEPARATOR exclusively, keep DIR_SEP for BC (Monte)
  - changed "link" to "href" in html_image. "link" is still working
    but deprecated (messju)
  - html_image always renders an alt-tag now (default alt="") (messju)
  - fixed assign attribute for multiple counters (messju)
  - added simple math operators to variables (Monte)
  - enabled array(&$obj. 'source', 'timestamp', 'secure', 'trusted')
    as callback for register_resource() (messju);
  - enabled array(&$obj, 'method') as callback for